# script-messages

./: change_contact.py  cli.py  config.json  const.py  data.csv  keyboard.py  main.py  pyproject.toml  template.json
src/: change_contact.py  const.py  keyboard.py  main.py  messages.py  utils.py
